@@ -1,3 +1,11 @@
+2008-06-19  Ariya Hidayat  <ariya.hidayat@trolltech.com>
+
+        Reviewed by Timothy Hatcher.
+
+        Introduce compiler define for MinGW, to have COMPILER(MINGW).
+
+        * wtf/Platform.h:
+
 2008-06-19  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Geoff.
